--- a/Projects/HTML/Omnifood/css/style.css
+++ b/Projects/HTML/Omnifood/css/style.css
@@ -56,40 +56,9 @@ body {
   font-size: 1.6rem;
   color: var(--color-gray-medium);
 }
+/* *************** */
+/* GENERAL REUSABLE COMPONENTS */
 
-.section-hero {
-  padding: 9.6rem 0;
-  background-color: var(--color-accent-light);
-}
-
-.hero {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  max-width: 120rem;
-  margin: 0 auto;
-  gap: 9.6rem;
-}
-.heading-primary {
-  font-size: 5.2rem;
-  font-weight: var(--font-weight-bold);
-  margin-bottom: var(--spacing-medium);
-  line-height: 1.05;
-  color: var(--color-gray-dark);
-  letter-spacing: var(--letter-spacing-normal);
-}
-.hero-description {
-  font-size: 1.8rem;
-  margin-bottom: var(--spacing-large);
-  line-height: var(--line-height-md);
-}
-.hero-image {
-  width: 100%;
-}
-.hero-cta {
-  display: flex;
-  gap: 2rem;
-  margin-bottom: var(--spacing-larger);
-}
 .btn:link,
 .btn:visited {
   text-decoration: none;
@@ -121,12 +90,95 @@ body {
   color: var(--color-gray-medium);
   box-shadow: 0 0 0 2px #fff inset;
 }
+.heading-primary {
+  font-size: 5.2rem;
+  font-weight: var(--font-weight-bold);
+  margin-bottom: var(--spacing-medium);
+  line-height: 1.05;
+  color: var(--color-gray-dark);
+  letter-spacing: var(--letter-spacing-normal);
+}
+
+/* HEADER */
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 9.6rem;
+  background-color: var(--color-accent-light);
+  padding: 0 3.2rem;
+}
+.logo {
+  height: 2rem;
+}
+
+/* *************** */
+/* SECTION NAV */
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: var(--spacing-medium);
+}
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 1.8rem;
+  color: var(--color-gray-dark);
+  text-decoration: none;
+  transition: all ease 0.3s;
+}
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: var(--color-accent-dark);
+}
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 0.8rem 1.6rem;
+  border-radius: 8px;
+  background-color: var(--color-accent-dark);
+  color: #f5f5f5;
+}
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: var(--color-accent);
+}
+
+/* SECTION HERO */
+.section-hero {
+  padding: 4.8rem 0 9.6rem 0;
+  background-color: var(--color-accent-light);
+}
+
+.hero {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  max-width: 120rem;
+  margin: 0 auto;
+  padding-inline: 3.2rem;
+  gap: 9.6rem;
+}
+
+.hero-description {
+  font-size: 1.8rem;
+  margin-bottom: var(--spacing-large);
+  line-height: var(--line-height-md);
+}
+.hero-image {
+  width: 100%;
+}
+.hero-cta {
+  display: flex;
+  gap: 2rem;
+  margin-bottom: var(--spacing-larger);
+}
 
 /* DELIVERED MEALS */
 .delivered-meals {
   display: flex;
   align-items: center;
-  gap: var(--spacing-medium);
+  gap: 2.4rem;
 }
 .delivered-imgs {
   display: flex;
@@ -135,7 +187,7 @@ body {
   width: 4.2rem;
   height: 4.2rem;
   border-radius: 50%;
-  margin-left: -1rem;
+  margin-left: -1.5rem;
   border: 2.5px solid var(--color-accent-light);
 }
 
