--- a/Projects/HTML/Omnifood/css/style.css
+++ b/Projects/HTML/Omnifood/css/style.css
@@ -1,117 +1,3 @@
-/* 
------ 01 Typography -----
-
-
-- FONT SIZE SYSTEM (px)
-  10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
-- FONT WEIGHT
-  Default : 400
-- Colors
-  Main : #e67e22
-  Tints:
-  Accents:
-  Shades:
-  Grays: #555, #777, #999, #bbb, #ddd, #f5f5f5
-
-- Shadows
-
-- Border Radius
-
--White Space
-  - SPACING SYSTEM (px)
-    2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
------ END Typography -----
-
-*/
-:root {
-  --color-accent: #e67e22;
-  --color-accent-light: #fae5d3;
-  --color-accent-dark: #cf711f;
-  --color-gray-dark: #333;
-  --color-gray-medium: #555;
-  --color-gray-light: #f5f5f5;
-
-  --font-size-base: 1.6rem;
-  --font-weight-normal: 400;
-  --font-weight-bold: 700;
-
-  --spacing-medium: 3.2rem;
-  --spacing-large: 4.8rem;
-  --spacing-larger: 6.4rem;
-
-  --letter-spacing-normal: 1.05px;
-}
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-html {
-  font-size: 62.5%;
-}
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  line-height: 1.6;
-  font-size: 1.6rem;
-  color: var(--color-gray-medium);
-}
-/* *************** */
-/* GENERAL REUSABLE COMPONENTS */
-
-.btn:link,
-.btn:visited {
-  text-decoration: none;
-  display: inline-block;
-  font-size: 2rem;
-  font-weight: 600;
-  padding: 0.8rem 1.6rem;
-  /* font: inherit; */
-  color: #000;
-  border-radius: 8px;
-  transition: all ease 0.3s;
-}
-.btn--full:link,
-.btn--full:visited {
-  background-color: var(--color-accent);
-  color: #fff;
-}
-.btn--full:hover,
-.btn--full:active {
-  background-color: var(--color-accent-dark);
-}
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-}
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: var(--color-accent-light);
-  color: var(--color-gray-medium);
-  box-shadow: 0 0 0 2px #fff inset;
-}
-.heading-primary {
-  font-size: 5.2rem;
-  font-weight: var(--font-weight-bold);
-  margin-bottom: var(--spacing-medium);
-  line-height: 1.05;
-  color: var(--color-gray-dark);
-  letter-spacing: var(--letter-spacing-normal);
-}
-
-/* HEADER */
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 9.6rem;
-  background-color: var(--color-accent-light);
-  padding: 0 3.2rem;
-}
-.logo {
-  height: 2rem;
-}
-
 /* *************** */
 /* SECTION NAV */
 .main-nav-list {
@@ -154,7 +40,7 @@ body {
 .hero {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  max-width: 120rem;
+  max-width: 130rem;
   margin: 0 auto;
   padding-inline: 3.2rem;
   gap: 9.6rem;
@@ -199,4 +85,60 @@ body {
 .delivered-number {
   color: var(--color-accent-dark);
   font-size: 2.4rem;
+}
+
+/* HOW IT WORKS */
+.section-how {
+  padding: 4.8rem 0;
+}
+
+/* STEP */
+.step-image-box {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.step-image-box::before {
+  content: '';
+  display: block;
+  width: 60%;
+  padding-bottom: 60%;
+
+  background-color: var(--color-accent-light);
+  border-radius: 50%;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.step-image-box::after {
+  content: '';
+  display: block;
+  width: 80%;
+  padding-bottom: 80%;
+
+  background-color: var(--);
+  border-radius: 50%;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.step-image-box img {
+  width: 35%;
+}
+
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  margin-bottom: 0.8rem;
+  color: #ddd;
+}
+.step-description {
+  font-size: 1.6rem;
+  line-height: 1.8;
+  color: var(--color-gray-medium);
 }
