--- a/Projects/Landing-Pages/Cursor/css/style.css
+++ b/Projects/Landing-Pages/Cursor/css/style.css
@@ -1,63 +1,3 @@
-:root {
-  --color-accent: #14120b;
-
-  --primary-text-color: #edecec;
-  --bg-button-white: #d7d6d5;
-  --color-gray: #b6b5b3;
-  /*  #EDECEC */
-  --font-size-small: 1.4rem;
-  --font-size-base: 1.6rem;
-
-  --fw-regular: 400;
-  --fw-md: 600;
-  --fw-bold: 700;
-
-  --spacing-sm: 0.8rem;
-  --spacing-md: 2rem;
-}
-@font-face {
-  font-family: 'navFont';
-  src:
-    url(../fonts/f30fd2e485acf1bc-s.p.3d1b066d.woff2) format('woff2'),
-    url(../fonts/f30fd2e485acf1bc-s.p.3d1b066d.woff) format('woff');
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-html {
-  font-size: 62.5%; /* 1rem = 10px */
-}
-
-body {
-  font-family: 'navFont', Arial, sans-serif;
-  line-height: 1.6;
-  font-weight: 400;
-  font-size: var(--font-size-base); /* 16px */
-  color: var(--primary-text-color);
-  background-color: var(--color-accent);
-}
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 var(--spacing-md);
-}
-ul {
-  list-style: none;
-}
-a:link,
-a:visited {
-  text-decoration: none;
-  color: inherit;
-}
-a:hover,
-a:active {
-  text-decoration: none;
-  color: var(--color-gray);
-}
-
 /* NAVBAR */
 .logo-svg {
   width: 95.37px;
@@ -142,4 +82,35 @@ a:active {
   display: inline-block;
   margin-left: 0.6rem;
   vertical-align: middle;
+}
+
+/* SECTION HERO */
+.section-hero {
+  margin: 12.8rem 0;
+}
+.hero-text {
+  font-family: 'cursorBold', Arial, sans-serif;
+  font-size: 2.4rem;
+  line-height: 1.4;
+  font-weight: 700;
+  margin-bottom: 2.4rem;
+}
+.download {
+  padding: 1.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.6rem;
+  gap: 0.4rem;
+}
+
+.hero-bg-img {
+  margin-top: 4.8rem;
+}
+.hero-bg-img img {
+  width: 100%;
+}
+
+/* SECTION TRUSTED BY */
+.section-trustedBy {
 }
