--- a/Projects/Landing-Pages/Cursor/css/style.css
+++ b/Projects/Landing-Pages/Cursor/css/style.css
@@ -110,7 +110,82 @@
 .hero-bg-img img {
   width: 100%;
 }
+.image-box {
+  position: relative;
+  height: 100vh;
+}
+.image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.code-container {
+  display: grid;
+  grid-template-columns: 1.5fr 3fr 2fr;
+  grid-template-rows: 2.4rem 1fr;
+  position: absolute;
+  bottom: -20%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  background-color: var(--color-accent);
+  border-radius: 0.8rem;
+  padding-inline: 1.2rem;
+}
+.code-top {
+  grid-column: 1/-1;
+  grid-row: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 0.5px solid #333;
+}
+.code-left {
+  color: var(--color-gray);
+}
+/* circles */
+.circles {
+  display: flex;
+  gap: 0.5rem;
+}
+.circle {
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  background-color: #292821;
+  border-radius: 50%;
+}
 
+.progress-text {
+  font-family: cursorBold;
+  text-transform: uppercase;
+  font-weight: var(--fw-bold);
+  font-size: 1.2rem;
+  margin-bottom: 1.8rem;
+}
+
+.in-progress-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.2rem;
+  gap: 1rem;
+}
+.trunc-text {
+  font-size: 1.2rem;
+  max-width: 16rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: -6px;
+}
+.generating-text {
+  color: var(--color-gray);
+  font-size: 1.4rem;
+  font-weight: var(--fw-md);
+}
+.down-part {
+}
 /* SECTION TRUSTED BY */
 .section-trustedBy {
 }
