--- a/Projects/Landing-Pages/Cursor/css/style.css
+++ b/Projects/Landing-Pages/Cursor/css/style.css
@@ -88,6 +88,9 @@
 .section-hero {
   margin: 12.8rem 0;
 }
+.hero {
+  margin: 12.8rem 0;
+}
 .hero-text {
   font-family: 'cursorBold', Arial, sans-serif;
   font-size: 2.4rem;
@@ -114,6 +117,12 @@
   position: relative;
   height: 100vh;
 }
+.show {
+  opacity: 0;
+}
+.code-container:hover .code-top .show {
+  opacity: 1;
+}
 .image-box img {
   width: 100%;
   height: 100%;
@@ -121,7 +130,7 @@
 }
 .code-container {
   display: grid;
-  grid-template-columns: 1.5fr 3fr 2fr;
+  grid-template-columns: 1.5fr 3fr auto;
   grid-template-rows: 2.4rem 1fr;
   position: absolute;
   bottom: -20%;
@@ -129,9 +138,11 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 90%;
+  height: 90vh;
   background-color: var(--color-accent);
   border-radius: 0.8rem;
   padding-inline: 1.2rem;
+  overflow: hidden;
 }
 .code-top {
   grid-column: 1/-1;
@@ -141,8 +152,12 @@
   justify-content: space-between;
   border-bottom: 0.5px solid #333;
 }
-.code-left {
+.code-left,
+.code-middle,
+.code-right {
+  padding: 1.2rem 1.2rem;
   color: var(--color-gray);
+  border-right: 0.5px solid #333;
 }
 /* circles */
 .circles {
@@ -184,8 +199,35 @@
   font-size: 1.4rem;
   font-weight: var(--fw-md);
 }
-.down-part {
+/* CODE MIDDLE PART */
+.code-title {
+  font-family: 'cursorBold', Arial, sans-serif;
+  font-size: 1.6rem;
+  font-weight: var(--fw-bold);
+  margin-bottom: 0.8rem;
 }
+.code-middle {
+  overflow-y: auto;
+}
+
 /* SECTION TRUSTED BY */
 .section-trustedBy {
+  margin: 12.8rem 0;
+}
+
+.logo-list {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+.logo-item {
+  height: 3vh;
+  padding: 3.8rem;
+  background-color: #1b1913;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.logo {
+  width: 100%;
 }
