add color change in secondary text on hover

--- a/Projects/Landing-Pages/Cursor/css/general.css
+++ b/Projects/Landing-Pages/Cursor/css/general.css
@@ -69,6 +69,9 @@ a:active {
   width: 1.6rem;
   height: 1.6rem;
 }
+a.text-secondary:hover {
+  color: #e07b3f !important;
+}
 
 .heading-secondary {
   font-size: 1.8rem;
