--- a/Projects/Landing-Pages/Mintlify/css/style.css
+++ b/Projects/Landing-Pages/Mintlify/css/style.css
@@ -1,7 +1,10 @@
 /* HEADER */
 .header {
+  position: relative;
   height: 100vh;
-  background-image: url(/assets/svgs/bg-dark.svg);
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)),
+    url(/assets/svgs/bg-dark.svg);
   background-size: cover;
   background-position: center;
 }
@@ -20,25 +23,95 @@
 .main-nav ul a {
   display: inline-block;
   padding: 0.8rem 1.2rem;
-  /* background: rgba(255, 255, 255, 0.2); */
-  /* Blur the content behind */
 }
 .main-nav ul a:hover {
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.9);
   border-radius: 16px;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.1);
-  background-color: var(--color-dark--light);
 }
-.glossy-background {
-  /* Semi-transparent white background */
-  color: var(--color-gray-light);
-  /* Blur the content behind */
+
+/* HERO SECTION */
+
+.hero-banner {
+  padding: 0.4rem 0.8rem;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.9);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 100px;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  /* Light border for edge shine */
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  -ms-border-radius: 100px;
+  -o-border-radius: 100px;
+}
+.hero-banner:hover {
+  cursor: pointer;
+  background-color: var(--color-gray--dark);
+}
+.hero-banner button {
+  background-color: var(--color-primary);
+  color: var(--color-white);
+  padding: 0.4rem 0.6rem;
+  border: none;
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  -ms-border-radius: 100px;
+  -o-border-radius: 100px;
+  font-size: 1.4rem;
+  font-weight: 600;
+  cursor: pointer;
+}
+.hero-banner button:hover {
+  background-color: var(--color-primary--light);
+  color: var(--color-dark--main);
+}
+.hero-title {
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 1.6rem 0;
+  color: var(--color-white);
+}
+.hero-title h1 {
+  line-height: 1.2;
+}
+
+.hero-text {
+  width: 80%;
+  font-size: 2.2rem;
+  line-height: 1.6;
+}
+.hero-form {
+  width: 80%;
+  padding: 0.4rem 0.8rem;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.9);
   border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 16px;
-  /* Soft shadow for depth */
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  border-radius: 100px;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  -ms-border-radius: 100px;
+  -o-border-radius: 100px;
+}
+.hero-form form input {
+  width: 70%;
+  padding: 1.2rem 1.6rem;
+  border: none;
+  border-radius: 100px;
+  outline: none;
+  font-size: 1.6rem;
+  background: transparent;
+  color: var(--color-white);
+}
+.hero-form form button {
+  padding: 1.2rem 2.4rem;
+  border: none;
+  border-radius: 100px;
+  background-color: var(--color-gray--main);
+  color: var(--color-dark--main);
+  font-size: 1.6rem;
+  font-weight: 600;
+  cursor: pointer;
 }
