--- a/Projects/Landing-Pages/Mintlify/css/style.css
+++ b/Projects/Landing-Pages/Mintlify/css/style.css
@@ -125,3 +125,38 @@
   font-size: 1.8rem;
   line-height: 1.6;
 }
+
+/* SECTION ENTERPRISE */
+.section-enterprise {
+  padding-block: 4.8rem;
+}
+.enterprise-card img {
+  width: 2.4rem;
+  height: 2, 4rem;
+}
+.gradient {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7));
+  opacity: 0;
+}
+.image-box:hover .gradient {
+  cursor: pointer;
+  opacity: 1;
+}
+.above-text {
+  position: absolute;
+  left: 0;
+  top: 15%;
+  padding: 0 8rem;
+}
+
+.company-logo img {
+  width: 12rem;
+  filter: grayscale(1);
+  -webkit-filter: grayscale(1);
+}
