--- a/Projects/Landing-Pages/Mintlify/css/style.css
+++ b/Projects/Landing-Pages/Mintlify/css/style.css
@@ -160,3 +160,56 @@
   filter: grayscale(1);
   -webkit-filter: grayscale(1);
 }
+
+/* SECTION CUSTOMER */
+.customer-card img {
+  width: 100%;
+  height: 50vh;
+  object-fit: cover;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+/* .customer-card--logo img {
+  width: 6.2rem;
+} */
+.read-more {
+  display: inline-block;
+  margin-top: auto;
+}
+.customer-card:hover,
+.customer-card:hover .gradient {
+  cursor: pointer;
+  opacity: 1;
+}
+.customer-card:hover .read-more {
+  cursor: pointer;
+  color: var(--color-primary);
+}
+.customer-card:hover .customer-text {
+  cursor: pointer;
+  color: var(--color-gray--light);
+}
+.customer-card--logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+.customer-card--logo svg {
+  width: 20rem;
+}
+.customer-card--logo svg.x {
+  width: 10rem;
+}
+
+/* SECTION CTA */
+.section-cta {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
