--- a/Projects/Landing-Pages/Mintlify/css/general.css
+++ b/Projects/Landing-Pages/Mintlify/css/general.css
@@ -223,6 +223,9 @@ body {
 .text-md {
   font-size: 2rem;
 }
+.text-lg {
+  font-size: 2.4rem;
+}
 .icon {
   display: inline-block;
   width: 2.4rem;
